--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -49,6 +49,7 @@ android {
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        multiDexEnabled true // Add this line to enable multidex support
     }
 
     buildTypes {
